# serialrpc

./: CMakeLists.txt  LICENSE  README.md  Tupfile  client.cc  client.h  e2e_test.cc  encoding.cc  encoding.h  encoding_test.cc  example.pb.cc  example.pb.h  example.pb_client.cc  example.pb_client.h  example.pb_msg.cc  example.pb_msg.h  example.pb_server.cc  example.pb_server.h  example.proto  example_service.cc  example_service.h  internal.cc  internal.h  library.json  package-lock.cmake  rpc.cc  rpc.h  serialrpc.proto  serialrpc_protocol.proto  server.cc  server.h
.tup/: db
cmd/serialrpcgen/: BUILD.py  CMakeLists.txt  CppFormatter.cc  CppFormatter.h  EchoObjects.cc  EchoObjects.h  ProtoCEchoPlugin.cc  ProtoCEchoPlugin.h  Tupfile  cpp_formatter.cc  cpp_formatter.h  protoc_serialrpc_plugin.cc  protoc_serialrpc_plugin.h  serialrpc.pb.cc  serialrpc.pb.h  serialrpc.proto  serialrpc_objects.cc  serialrpc_objects.h  serialrpcgen.cc  serialrpcgen_plugin.cc
cmd/serialrpcgen/.tup/: db
cmd/serialrpcgen/test_data/: example.pb_client.cc  example.pb_client.h  example.pb_msg.cc  example.pb_msg.h  example.pb_server.cc  example.pb_server.h  example.proto
